# traces

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
include/traces/: color.h  config.h  eventtracer.h  functionname.h  modules.h  threadname.h  tostring.h  tracemacros.h  traces.h
src/: eventtracer.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
